--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
        <header>
             <nav>
            <div class="row">
-               <img src="/huta_logo-weiss-neu.png" alt="Happy Dogz logo" class="logo">
-               <img src="/huta_logo-weiss-neu.png" alt="Happy Dogz logo" class="logo-black">
+               <img src="huta_logo-weiss-neu.png" alt="Happy Dogz logo" class="logo">
+               <img src="huta_logo-weiss-neu.png" alt="Happy Dogz logo" class="logo-black">
                <ul class="main-nav js--main-nav">
                <li><a href="#features">Huta</a></li>
                <li><a href="#works">So geht's</a></li>
