--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">    
         <link rel="stylesheet" type="text/css" href="queries.css">    
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" type="text/css">
-        <title>Die Hundetagesttätte für Köln | Happy Dogz</title>
+        <title>Die Hundetagesstätte für Köln | Happy Dogz</title>
         
         
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
